Add SetGoal And View pastMeals part

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">ADPROJECT_Android_v2</string>
+    <string name="set_goal">What is your lifestyle goal?</string>
+    <string name="totalMealCount">totalMealCount: </string>
+    <string name="targetCount">targetCount: </string>
+
+    <string name="cancel">Cancel</string>
+    <string name="title">Choose Date</string>
+    <string name="confirm">Sure</string>
+    <string name="year">Y</string>
+    <string name="month">M</string>
+    <string name="day">D</string>
+    <string name="hour">H</string>
+    <string name="minute">m</string>
+
+    <string name="select_date">Select date</string>
+    <string name="current_date">Current date</string>
+    <string name="select_time">Choose time</string>
+    <string name="current_time">Current time</string>
 </resources>
