--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="current_date">Current date</string>
     <string name="select_time">Choose time</string>
     <string name="current_time">Current time</string>
+
+    <string name="endGoal">End this goal</string>
+    <string name="confirm_endGoal">Do you wish to end this goal?</string>
 </resources>
