--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="reminderText">Reminder Time</string>
     <string name="setTime">Set Time</string>
     <string name="reminderTime">20: 00</string>
+    <string name="send_reminder">Send reminder</string>
 </resources>
