--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,22 @@
 
     <string name="endGoal">End this goal</string>
     <string name="confirm_endGoal">Do you wish to end this goal?</string>
+
+    <!--User Dashboard-->
+    <string name="current_goal">Current Goal:   </string>
+    <string name="my_progress">How did I progress? </string>
+
+    <!-- Navigation Bar -->
+    <string name="text_label_1">Meals</string>
+    <string name="text_label_2">Path </string>
+    <string name="text_label_3">Add </string>
+    <string name="text_label_4">Friends </string>
+    <string name="text_label_5">Settings </string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Settings Page -->
+    <string name="reminderText">Reminder Time</string>
+    <string name="setTime">Set Time</string>
+    <string name="reminderTime">20: 00</string>
+    <string name="send_reminder">Send reminder</string>
 </resources>
