--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <!--User Dashboard-->
     <string name="current_goal">Current Goal:   </string>
     <string name="my_progress">How did I progress? </string>
+    <string name="intro_to_app">Select "add" at navigation bar to start logging a meal entry</string>
 
     <!-- Navigation Bar -->
     <string name="text_label_1">Meals</string>
@@ -31,7 +32,7 @@
     <string name="title_activity_settings">SettingsActivity</string>
 
     <!-- Settings Page -->
-    <string name="reminderText">Reminder Time</string>
+    <string name="settings">Settings</string>
     <string name="setTime">Set Time</string>
     <string name="reminderTime">20: 00</string>
     <string name="send_reminder">Send reminder</string>
