--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="title_activity_settings">SettingsActivity</string>
 
     <!-- Setting Page -->
-    <string name="editProfile">Edit Profile</string>
+    <string name="editProfile">My Profile</string>
     <string name="notification">Enable Notification</string>
     <string name="logout">Logout</string>
 
@@ -53,5 +53,5 @@
     <string name="send_reminder">Send reminder</string>
 
     <!-- IP Address -->
-    <string name="IP">http://192.168.1.8:8080</string>
+    <string name="IP">http://192.168.31.50:8888</string>
 </resources>
