--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,6 @@
     <string name="send_reminder">Send reminder</string>
 
     <!-- IP Address -->
-    <string name="IP">http://3.1.222.99:9999</string>
+    <!--<string name="IP">http://3.1.222.99:9999</string>-->
+    <string name="IP">http://192.168.1.176:8080</string>
 </resources>
